codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permission_discovery_remote.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 110)"
---
  Update Model Permissions

› 1. Ask for approval ✓  Codex can read and edit files in the current workspace, and run commands. Approval
                         is required to access the internet or edit other files.
     Approve for me      Only ask for actions detected as potentially unsafe. · Unavailable: Disabled by
                         requirements.
     Full Access         Codex can edit files outside this workspace and access the internet without asking
                         for approval. Exercise caution when using. · Unavailable: Disabled by requirements.
     Read Only           Codex can read files in the current workspace. Approval is required to edit files
                         or access the internet. · Unavailable: Disabled by requirements.
  2. server-only         Description from the connected server.

  ↑/↓ choose · enter confirm · esc back
