codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Personality
  Choose a communication style for Codex.

  1. Friendly     Warm, collaborative, and helpful.
› 2. Pragmatic ✓  Concise, task-focused, and direct.

  ↑/↓ choose · enter confirm · esc back
